custom styles and footer.js added

--- a/head.html
+++ b/head.html
@@ -2,3 +2,10 @@
 <script src="/scripts/lib-franklin.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+<!-- custom styles added starting -->
+<link rel="stylesheet" href="/styles/entry.css"/>
+<link rel="stylesheet" href="/styles/cta.scss"/>
+<link rel="stylesheet" href="/styles/legacy.css"/>
+<link rel="stylesheet" href="/styles/global.css"/>
+<link rel="stylesheet" href="/styles/clientlib-base.min.css"/>
+<!-- custom styles added ending -->
