--- a/head.html
+++ b/head.html
@@ -9,3 +9,7 @@
 <link rel="stylesheet" href="/styles/global.css"/>
 <link rel="stylesheet" href="/styles/clientlib-base.min.css"/>
 <!-- custom styles added ending -->
+<link rel="stylesheet" href="https://www.infosys.com/content/dam/infosys-web/en/global-resource/designs/css/commonstyles.css"/>
+<link rel="stylesheet" href="https://www.infosys.com/etc.clientlibs/infosys-web/clientlibs/clientlib-commons.css"/>
+<link rel="stylesheet" href="https://www.infosys.com/content/dam/infosys-web/en/global-resource/designs/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="https://www.infosys.com/etc.clientlibs/infosys-web/clientlibs/clientlib-base.css"/>
